# egui_charts

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: demo.rs
src/: animation.rs  bar_chart.rs  interaction.rs  lib.rs  line_chart.rs  pie_chart.rs  theme.rs  tooltip.rs
src/elements/: arc.rs  bar.rs  line.rs  mod.rs
src/helpers/: color.rs  math.rs
